--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,5 @@ workflows:
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           region: AWS_DEFAULT_REGION
-          repo: batch
+          repo: issei-dev
           tag: circleci
