--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ commands:
       - run: echo << parameters.to >>
 
 jobs:
-  myjob:
+  build:
     docker:
       - image: "circleci/node:9.6.1"
     steps:
